# vocalize-mcp

./: .gitignore  .mcp.json  .pre-commit-config.yaml  LICENSE  README.md  issues.md  main.py  pyproject.toml  test_engines.py  test_improvements.py  test_integration.py  test_voice.py
.github/workflows/: ci.yml
.private-journal/2025-06-05/: 10-30-07-886032.embedding  10-30-07-886032.md  10-35-32-271741.embedding  10-35-32-271741.md  10-41-29-193202.embedding  10-41-29-193202.md
